external-crates/move/crates/move-compiler/tests/move_check/ide_mode/named_struct_autocomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/named_struct_autocomplete.move:13:24
   │
13 │         let _tmp1 = _s.;
   │                        ^
   │                        │
   │                        Unexpected ';'
   │                        Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_check/ide_mode/named_struct_autocomplete.move:14:26
   │
14 │         let _tmp2 = _s.a.;
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number
